--- a/css/global.css
+++ b/css/global.css
@@ -62,23 +62,30 @@
     --dark-green: rgba(0, 37, 41, 1);
 
     /* font */
-    /* font weight */
-
     --font-weight-700: 700;
     --font-weight-600: 600;
     --font-weight-500: 500;
 
-    --h1-large-font-size-100: 10rem;
-    --h1-large-line-heigt-100: 1;
+    --h1-large-font-size-100px: 10rem;
+    --h1-large-line-heigt-100px: 1;
 
-    --h1-small-font-size-64: 6.4rem;
-    --h1-small-line-height-56: 0.88;
+    --h1-small-font-size-64px: 6.4rem;
+    --h1-small-line-height-56px: 0.88;
 
-    --h2-font-size-48: 4.8rem;
-    --h2-line-heigt-48: 1;
+    --h2-font-size-48px: 4.8rem;
+    --h2-line-heigt-48px: 1;
 
-    --h3-font-size-18: 1.8rem;
-    --h3-line-height-28: 1.56;
+    --h3-font-size-18px: 1.8rem;
+    --h3-line-height-28px: 1.56;
+
+    --p-font-size-18px: 1.8rem;
+    --p-line-height-28px: 2.8rem;
+
+    --p-font-size-15px: 1.5rem;
+    --p-line-height-25px: 2.5rem;
+
+    --border-radius-24px: 2.4rem;
+    --border-radius-10px: 1rem;
 }
 
 *,
@@ -99,9 +106,9 @@ body {
     flex-direction: column;
     font-family: Livvic, Arial, Helvetica, sans-serif;
     font-style: normal;
-    font-weight: 700;
-    font-size: 48px;
-    line-height: 48px;
+    font-size: 400;
+    font-size: var(--h3-font-size-18px);
+    line-height: var(--h3-line-height-28px);
     height: 100%;
 }
 
@@ -131,14 +138,14 @@ a {
 
 /* Buttons */
 .btn {
-    border: 2px solid #ffffff;
-    border-radius: 24px;
+    border: 2px solid var(--white);
+    border-radius: var(--border-radius-24px);
     padding: 0.9rem 3.3rem 1.1rem 3.2rem;
     display: block;
-    color: #ffffff;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 28px;
+    color: var(--white);
+    font-weight: var(--font-weight-600);
+    font-size: var(--h3-font-size-18px);
+    line-height: var(--h3-line-height-28px);
 }
 
 /* header */
@@ -162,10 +169,10 @@ a {
 
 .navigation__link {
     display: block;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 28px;
-    color: #ffffff;
+    font-weight: var(--font-weight-600);
+    font-size: var(--h3-font-size-18px);
+    line-height: var(--h3-line-height-28px);
+    color: var(--white);
 }
 
 /* main */
@@ -187,8 +194,8 @@ main {
 }
 
 .started-box__title {
-    font-size: 48px;
-    line-height: 48px;
+    font-size: var(--h2-font-size-48px);
+    line-height: var(--h2-line-heigt-48px);
     color: var(--sacramento-state-blue);
 }
 
@@ -218,10 +225,10 @@ main {
 }
 
 .footer-info__location--description {
-    font-weight: 600;
-    font-size: 15px;
-    line-height: 25px;
-    color: #ffffff;
+    font-weight: var(--font-weight-600);
+    font-size: var(--p-font-size-15px);
+    line-height: var(--p-line-height-25px);
+    color: var(--white);
     mix-blend-mode: normal;
     opacity: 0.6;
 }
@@ -245,14 +252,15 @@ main {
 }
 
 .solicial-link__img {
+    display: flex;
 }
 
 .solicial-links__description {
-    font-weight: 600;
-    font-size: 15px;
-    line-height: 25px;
+    font-weight: var(--font-weight-600);
+    font-size: var(--p-font-size-15px);
+    line-height: var(--p-line-height-25px);
     text-align: right;
-    color: #ffffff;
+    color: var(--white);
     mix-blend-mode: normal;
     opacity: 0.6;
 }
