--- a/html-folders/about-section/about.css
+++ b/html-folders/about-section/about.css
@@ -128,6 +128,11 @@
     border-radius: 50%;
     background-color: var(--ligt-color);
     color: #000;
+    cursor: pointer;
+}
+
+.directors__item--button:hover {
+    background-color: var(--raptur-blue);
 }
 
 /* front and  back when active*/
