add mobile menu and add responsive design

--- a/css/global.css
+++ b/css/global.css
@@ -78,6 +78,9 @@
     --h2-font-size-48px: 4.8rem;
     --h2-line-heigt-48px: 1;
 
+    --h2-font-size-32px: 32px;
+    --h2-line-heigh-32px: 1;
+
     --h3-font-size-18px: 1.8rem;
     --h3-line-height-28px: 1.56;
 
@@ -149,6 +152,7 @@ a {
     font-weight: var(--font-weight-600);
     font-size: var(--h3-font-size-18px);
     line-height: var(--h3-line-height-28px);
+    white-space: nowrap;
 }
 
 /* header */
@@ -162,9 +166,14 @@ a {
     gap: 8rem;
 }
 
+.site-logo_img {
+    display: flex;
+}
+
 .navigation {
     width: 100%;
 }
+
 .navigation__list {
     gap: 4rem;
 }
@@ -186,6 +195,37 @@ a {
     color: var(--dark-green);
 }
 
+/* mobile menu btn */
+.mobile__menu--button {
+    display: none;
+    width: 20px;
+    height: 17px;
+    border: 0;
+    background-color: inherit;
+    cursor: pointer;
+}
+
+.mobile__exit--button {
+    display: none;
+    border: 0;
+    background-color: inherit;
+    width: 20px;
+    cursor: pointer;
+}
+
+.mobile__exit--img {
+    width: 100%;
+    display: flex;
+}
+
+.mobile__menu--bg {
+    display: none;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 12;
+}
+
 /* main */
 main {
     flex-grow: 1;
@@ -205,6 +245,8 @@ main {
 }
 
 .started-box__title {
+    position: relative;
+    z-index: 1;
     font-size: var(--h2-font-size-48px);
     line-height: var(--h2-line-heigt-48px);
     color: var(--sacramento-state-blue);
@@ -222,13 +264,17 @@ main {
 
 .footer-info__box {
     background-color: var(--dark-green);
+    position: relative;
+    z-index: 10;
     padding-top: 4.8rem;
     padding-bottom: 4.8rem;
 }
 
 .footer-info-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    position: relative;
     justify-content: space-between;
-    gap: 12.5rem;
 }
 
 .footer-info__list {
@@ -256,6 +302,7 @@ main {
 }
 
 .solicial-links__list {
+    justify-content: flex-end;
     gap: 1.6rem;
 }
 
@@ -271,12 +318,179 @@ main {
     fill: var(--ligt-color);
 }
 
+.footer__since--box {
+    position: absolute;
+    bottom: 0;
+    right: 4rem;
+}
+
 .solicial-links__description {
     font-weight: var(--font-weight-600);
     font-size: var(--p-font-size-15px);
     line-height: var(--p-line-height-25px);
-    text-align: right;
     color: var(--white);
     mix-blend-mode: normal;
     opacity: 0.6;
+}
+
+/********************* Tablet ************************/
+@media only screen and (max-width: 768px) {
+    .header {
+        padding-top: 6.4rem;
+    }
+
+    .header-container {
+        gap: 4.8rem;
+    }
+
+    .site-logo_img {
+        width: 128px;
+        height: 32px;
+    }
+
+    /* footer */
+    .footer-container {
+        padding: 7.6rem 5.8rem;
+        position: relative;
+        background-color: var(--ligt-color);
+    }
+
+    .footer-info-container .site-logo-box .site-logo {
+        margin-bottom: 5.3rem;
+    }
+
+    .footer-bg-img {
+        bottom: -2rem;
+        z-index: 0;
+    }
+
+    .started-box__title {
+        font-size: var(--h2-font-size-32px);
+        line-height: var(--h2-line-heigh-32px);
+    }
+
+    .footer-info-container {
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 3.2rem;
+    }
+
+    .footer-info__list {
+        gap: 2.4rem;
+    }
+
+    .footer-info__location {
+        text-align: right;
+    }
+
+    .solicial-links__box {
+        grid-row: 2/3;
+    }
+
+    .solicial-links__list {
+        justify-content: flex-start;
+    }
+}
+
+/************************** Mobile*********************** */
+
+@media only screen and (max-width: 600px) {
+    .header-container {
+        justify-content: space-between;
+    }
+
+    .navigation {
+        position: fixed;
+        right: -100%;
+        width: 80%;
+        top: 0;
+        flex-direction: column;
+        padding-top: 11.2rem;
+        padding-left: 4.8rem;
+        align-items: flex-start;
+        justify-content: flex-start;
+        background-color: var(--plice-blue);
+        height: 100%;
+        z-index: 10;
+        transition: 0.3s;
+    }
+
+    .navigation__list {
+        flex-direction: column;
+        margin-bottom: 3.6rem;
+        gap: 2.4rem;
+    }
+
+    .mobile__menu--button {
+        display: block;
+    }
+
+    .mobile__exit--button {
+        display: block;
+        position: absolute;
+        top: 5.6rem;
+        right: 2.6rem;
+    }
+
+    .mobile__menu--bg {
+        display: block;
+    }
+
+    /* footer */
+    .footer-container {
+        padding: 8.3rem 2.4rem;
+        text-align: center;
+    }
+
+    .started-box {
+        flex-direction: column;
+        gap: 24px;
+    }
+
+    .started-box__title {
+        padding: 0 6.5rem;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .footer-info-container {
+        grid-template-columns: 1fr;
+        row-gap: 0;
+        text-align: center;
+    }
+
+    .footer-info-container .site-logo-box {
+        margin-bottom: 2.4rem;
+    }
+
+    .footer-info-container .site-logo-box .site-logo {
+        margin-bottom: 2.4rem;
+    }
+
+    .footer-info__list {
+        justify-content: center;
+    }
+
+    .footer-info__location {
+        margin-bottom: 4rem;
+        text-align: center;
+    }
+
+    .solicial-links__box {
+        grid-row: 3/4;
+        margin-bottom: 1.6rem;
+    }
+
+    .solicial-links__list {
+        justify-content: center;
+    }
+
+    .footer__since--box {
+        position: static;
+    }
+}
+
+@media (max-width: 375px) {
+    .header {
+        padding-top: 4.8rem;
+    }
 }
